- Added example validation for required elements on the client side and model state validation on the server side.

--- a/TaxiCab/Views/Shared/_Layout.cshtml
+++ b/TaxiCab/Views/Shared/_Layout.cshtml
@@ -111,6 +111,7 @@
                     <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
                 </footer>*@
         </div>
+        <toaster-container></toaster-container>
         <div class="" data-ng-view>
         </div>
         <!-- FOOTER -->
